--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="keywords" content="HTML, CSS, JavaScript">
       <meta name="description"
          content="A clean, beautiful and responsive portfolio template for Developers! using only Html, CSS, and JavaScript">
-      <meta name="author" content="Puskar Adhikari">
+      <meta name="author" content="Alberto Cabrera">
       <title>Puskar Adhikari | Frot-End Developer</title>
       <link href="./css/header.css" rel="stylesheet" />
       <link href="./css/main.css" rel="stylesheet" />
@@ -25,7 +25,7 @@
          <div class="container">
             <div class="row">
                <div class="brand-name">
-                  <a href="/" class="logo">Puskar</a>
+                  <a href="/" class="logo">Cabrera</a>
                </div>
                <div class="hamburger">
                   <i class="fa fa-bars"></i>
@@ -48,9 +48,9 @@
             <div class="row full-screen">
                <div class="home-content">
                   <div class="block">
-                     <h6>Hi, my name is</h6>
-                     <h1>Puskar Adhikari</h1>
-                     <h3>I build things for the web</h3>
+                     <h6>Hallo, mein Name ist</h6>
+                     <h1>Alberto Cabrera</h1>
+                     <h3>Ich erstelle Websites</h3>
                      <div class="cv-btn">
                         <a href="#">Donwload CV</a>
                      </div>
@@ -74,30 +74,30 @@
                      <img src="img/me.png" alt='me' />
                   </div>
                   <div class="text">
-                     <h4>I'm Puskar Adhikari</h4>
-                     <h6>A <span>Web developer</span> and <span>front-end engineer</span> living and working in
-                        Kathmandu, Nepal
+                     <h4>Ich bin Alberto Cabrera</h4>
+                     <h6>Ein <span>Web-</span> und <span>Frontend Entwickler</span>, der in Deutschland lebt und arbeitet.
                      </h6>
-                     <p>I'm passionate about creating and developing clean, unique, elegant products. I specialize in
-                        building Websites for small to medium size business. I keep my code clean, readable, modular and
-                        well refactored. I enjoy working with complex user interfaces
+                     <p>Ich bin begeistert davon, saubere, einzigartige und elegante Produkte zu schaffen und zu entwickeln. Ich bin spezialisiert auf den
+                        Aufbau von Websites für kleine bis mittelgroße Geschäft. Ich halte meinen Code sauber, lesbar und modular. Ich arbeite gerne mit komplexen Benutzeroberflächen.
                      </p>
                      <div class="skills">
-                        <h6>Here are My few Tech Stack I've been working:</h6>
+                        <h6>Hier sind mein wenige Tech -Stack, an dem ich gearbeitet habe:</h6>
                         <div class="skills-list">
                         <ul  class="fa-ul">
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript</li>
                            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>HTML5</li>
                            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS/SCSS</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Hostinger</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>JavaScript</li>
                            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>React JS</li>
                            <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Next.JS</li>
                         </ul>
                         <ul  class="fa-ul">
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Version Control</li>
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>UI/UX Design</li>
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS/SCSS</li>
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Firebase</li>
-                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Adobe XD</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Node.JS</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Express.JS</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>SQL</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Python</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Django</li>
+                           <li><span class="fa-li"><i class="fas fa-check-square"></i></span>AWS</li>
                         </ul>
                         </div>
                      </div>
@@ -125,46 +125,45 @@
                   <div class="box">
                      <div class="icon"><i class="fa fa-laptop"></i></div>
                      <h5>Web Design</h5>
-                     <p>From single landing pages to a fully-blown eCommerce store,
-                        I'll create a design that fits you and your business.
+                     <p>Von einzelnen Landing Pages bis zu einem vollständigen E-Commerce-Geschäft.
+                        Ich werde ein Design erstellen, das zu Ihnen und Ihrem Geschäft passt.
                      </p>
                   </div>
                   <div class="box">
                      <div class="icon"><i class="fa fa-code"></i></div>
                      <h5>Web Development</h5>
-                     <p>I create fully scalable and economically viable web
-                        applications that boost your business.
+                     <p>Ich erstelle voll skalierbare und wirtschaftlich tragfähige Webanwendungen, die Ihr Geschäft stärken.
                      </p>
                   </div>
                   <div class="box">
                      <div class="icon"><i class="fas fa-palette"></i></div>
                      <h5>UI/UX Design</h5>
-                     <p>Powerful UI/UX is the key to higher user adoption rates, and
-                        easier onboarding. By taking the following elements, I conduct
-                        initial research and craft the design.
+                     <p>Leistungsstarke UI/UX ist der Schlüssel zu höheren Nutzernaditionsraten, und
+                        Einfacher in Bord. Wenn ich die folgenden Elemente nehme, bin ich Verhalten
+                        Erstes Forschungs- und Entwurf des Designs.
                      </p>
                   </div>
                   <div class="box">
                      <div class="icon"><i class="fas fa-wallet"></i></div>
                      <h5>Business Application</h5>
-                     <p>I take an innovation-led approach to business application
-                        services that make use of emerging technology and
-                        software-as-a-service.
+                     <p>Ich verfolge einen innovationsgeführten Ansatz für die Geschäftsanwendung
+                        Dienstleistungen, die aufkommende Technologie nutzen und
+                        Software-as-a-Service.
                      </p>
                   </div>
                   <div class="box">
                      <div class="icon"><i class="fa fa-mobile"></i></div>
                      <h5>Apps Interfac</h5>
-                     <p>To match the pace, I give my best to design eye-catching
-                        designs and prominent user-interfaces.
+                     <p>Um der PAE zu entsprechen, gebe ich mein Bestes, um auf Augenhöhe zu entwerfen
+                        Designs und prominente Benutzerinterfassen.
                      </p>
                   </div>
                   <div class="box">
                      <div class="icon"><i class="fa fa-rocket"></i></div>
                      <h5>SEO</h5>
-                     <p>SEO is a critical component of online marketing. I use a
-                        combination of the latest onsite and off-site strategies to
-                        produce top results.
+                     <p>SEO ist ein kritischer Bestandteil des Online -Marketings. Ich benutze a
+                        Kombination aus den neuesten Strategien vor Ort und außerhalb des Standorts an
+                        erzeugt Top -Ergebnisse.
                      </p>
                   </div>
                </div>
