actualizando el footer

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                      </div>
                      <div class="blog-text">
                         <div class="blog-info">
-                           <span>April 27, 2020</span>
+                           <span>April 20, 2023</span>
                            <span>Programming</span>
                         </div>
                         <h3>Why we don’t need a degree to be a Developer.</h3>
@@ -410,7 +410,7 @@
       <footer>
          <div class="container">
             <div class="row">
-               <div class="footer-logo">Puskar</div>
+               <div class="footer-logo">Cabrera</div>
                <div class="social-link">
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-instagram"></i></a>
@@ -423,7 +423,7 @@
       </footer>
       <section class="copyright">
          <div class="container">
-            <p>© <span id="year"></span> | Designed and Developed By Puskar Adhikari. | All rights reserved.</p>
+            <p>© <span id="year"></span> | Entworfen und entwickelt von Alberto Cabrera. | Alle Rechte vorbehalten.</p>
          </div>
       </section>
       <div class="lightbox hide">
