--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                <div class="navbar">
                   <ul>
                      <li><a href="#home" class="active">Home</a></li>
-                     <li><a href="#about">About</a></li>
+                     <li><a href="#about">Über Mich</a></li>
                      <li><a href="#services">Services</a></li>
                      <li><a href="#portfolio">Portfolio</a></li>
                      <li><a href="#blog">Blog</a></li>
-                     <li><a href="#contact">Contact</a></li>
+                     <li><a href="#contact">Kontakt</a></li>
                   </ul>
                </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="row full-screen">
                <div class="home-content">
                   <div class="block">
-                     <h6>Hallo, mein Name ist</h6>
+                     <h6>Hallo, ich bin</h6>
                      <h1>Alberto Cabrera</h1>
                      <h3>Ich erstelle Websites</h3>
                      <div class="cv-btn">
@@ -63,8 +63,8 @@
          <div class="container">
          <div class="row">
             <div class="title">
-               <h1>About Me</h1>
-               <p>Know more about me</p>
+               <h1>Über Mich</h1>
+               <p>Erfahren Sie mehr über mich</p>
             </div>
          </div>
          <div class="row">
@@ -251,10 +251,10 @@
          <div class="container">
             <div class="row align-items-center">
                <div class="message-text">
-                  <h2>My inbox is always open. Whether you have a question or just want to say hi or want to hire me, I'll try my best to get back to you!</h2>
+                  <h2>Mein Posteingang ist immer geöffnet. Egal, ob Sie eine Frage haben oder Hallo sagen oder mich einstellen möchten, ich werde mein Bestes geben, um mich bei Ihnen zu melden!</h2>
                </div>
                <div class="button ">
-                  <a href=''>Get In Touch</a>
+                  <a href=''>Kontaktiere mich</a>
                </div>
             </div>
          </div>
@@ -319,7 +319,7 @@
          <div class="container">
             <div class="row">
                <div class="title text-center">
-                  <h1>Latest Blogs</h1>
+                  <h1>Neueste Blogs</h1>
                </div>
             </div>
             <div class="row">
@@ -333,9 +333,9 @@
                            <span>May 3, 2020</span>
                            <span>Version Control</span>
                         </div>
-                        <h3>Why every developer uses Git.</h3>
-                        <p>Git allows us to have a “version” of a project which shows the changes that were made to the code over time, and allows us to backtrack if necessary and undo the changes.</p>
-                        <a href="https://devpuskar.netlify.app/blogs/04git">Read More</a>
+                        <h3>Warum jeder Entwickler Git benutzt.</h3>
+                        <p>Mit Git können wir eine „Version“ eines Projekts haben, das die Änderungen zeigt, die im Laufe der Zeit am Code vorgenommen wurden, und es uns ermöglicht, bei Bedarf zurückzukehren und die Änderungen rückgängig zu machen.</p>
+                        <a href="https://devpuskar.netlify.app/blogs/04git">Weiter lesen</a>
                      </div>
                   </div>
                   <div class="blog-box">
@@ -348,8 +348,8 @@
                            <span>Web Development</span>
                         </div>
                         <h3>JavaScript Promises</h3>
-                        <p>Before we use promises, our code was full of confusing callback tricks and asynchronous. Switching to promises made our code easier to read, understand, and test.</p>
-                        <a href="https://devpuskar.netlify.app/blogs/03jspromises">Read More</a>
+                        <p>Bevor wir Promises verwenden, war unser Code voller verwirrender Rückruf -Tricks und asynchron. Durch den Umschalten auf Versprechen wurde unser Code leichter zu lesen, zu verstehen und zu testen.</p>
+                        <a href="https://devpuskar.netlify.app/blogs/03jspromises">Weiter Lesen</a>
                      </div>
                   </div>
                   <div class="blog-box">
@@ -361,9 +361,9 @@
                            <span>April 20, 2023</span>
                            <span>Programming</span>
                         </div>
-                        <h3>Why we don’t need a degree to be a Developer.</h3>
-                        <p>That's right. You don’t need a degree to be a developer. Whilst university is definitely the right path for some people, it is not right for everyone.</p>
-                        <a href="https://devpuskar.netlify.app/blogs/01developerdegree">Read More</a>
+                        <h3>Warum wir keinen Abschluss brauchen, um Developer zu sein..</h3>
+                        <p>Das stimmt. Sie brauchen keinen Abschluss, um Entwickler zu sein. Während die Universität definitiv der richtige Weg für andere Studierenden ist, ist es für alle nicht richtig.</p>
+                        <a href="https://devpuskar.netlify.app/blogs/01developerdegree">Weiter Lesen</a>
                      </div>
                   </div>
                </div>
@@ -374,33 +374,33 @@
          <div class="container">
             <div class="row">
                <div class="title text-center">
-                  <h1>Get In Touch</h1>
+                  <h1>Kontakt</h1>
                </div>
             </div>
             <div class="row">
                <div class="contact-form">
                   <div class="row">
                      <div class="contact-text">
-                        <h2>Drop Me message</h2>
-                        <p>My inbox is always open I'll try my best to get back to you!</p>
+                        <h2>Melde dich</h2>
+                        <p>Mein Posteingang ist immer geöffnet. Ich werde mein Bestes geben, um mich bei Ihnen zu melden!</p>
                      </div>
                   </div>
                   <div class="row space-between">
                      <div class="col-6">
-                        <input type="text" class="form-control" name="" placeholder="Name" />
+                        <input type="text" class="form-control" name="" placeholder="Name:" />
                      </div>
                      <div class="col-6">
-                        <input type="text" class="form-control" name="" placeholder="Email" />
+                        <input type="text" class="form-control" name="" placeholder="Email:" />
                      </div>
                   </div>
                   <div class="row">
                      <div class="col-12">
-                        <textarea class="form-control" placeholder="Your Message"></textarea>
+                        <textarea class="form-control" placeholder="Deine Nachricht:"></textarea>
                      </div>
                   </div>
                   <div class="row">
                      <div class="button btn">
-                        <a href="#">Get In Touch</a>
+                        <a href="#">Senden</a>
                      </div>
                   </div>
                </div>
